@@ -33,6 +33,7 @@
 #include "../params.h"
 #include <QVarLengthArray>
 #include <QColor>
+#include <QPointF>
 #include <objects/linestyle.h>
 
 
@@ -54,11 +55,7 @@ public:
 	/**
 	 * Resets the content of the curve.
 	 */
-	void    clear()
-	{
-		x.clear();
-		y.clear();
-	}
+	void clear() {pt.clear();}
 
 	int     closestPoint(double xs, double ys, double &dist);
 	void    closestPoint(double xs, double ys, double &dist, int &n);
@@ -123,10 +120,10 @@ public:
 	bool pointsVisible() {return m_curveStyle.m_PointStyle>0; }
 
 	/** Returns the Curve's number of points. */
-	int size() {return x.count();}
+	int size() {return pt.count();}
 
 	/** Returns the Curve's number of points. */
-	int count() {return x.size();}
+	int count() {return pt.size();}
 
 	/** Returns the Curve style*/
 	int style() {return m_curveStyle.m_Style;}
@@ -153,8 +150,9 @@ public:
 
 public:
 	//	Curve Data
-	QVarLengthArray<double,  1024> x;          /**< the array of the points x-coordinates */
-	QVarLengthArray<double,  1024> y;          /**< the array of the points y-coordinates */
+//	QVarLengthArray<double,  1024> x;          /**< the array of the points x-coordinates */
+//	QVarLengthArray<double,  1024> y;          /**< the array of the points y-coordinates */
+	QVarLengthArray<QPointF, 1024> pt;         /**< the array of curve points >*/
 
 
 private:	
